created header sec, added first set images

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 </head>
 
 <body>
+    <header>
+        <h1>Il mio Viaggio a Londra</h1>
+        <img src="img/ruota_panoramica.jpg" alt="Spiacenti, immagine non trovata">
+        <img src="img/sfondo_uno.jpg" alt="Spiacenti, immagine non trovata">
+        <img src="img/sfondo_due.jpg" alt="Spiacenti, immagine non trovata">
+        <hr>
+    </header>
     
 </body>
 </html>
