--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,13 +11,66 @@
 </head>
 
 <body>
+    <!-- head section -->
     <header>
+        <!-- head title -->
         <h1>Il mio Viaggio a Londra</h1>
+        <!-- images source for head section -->
         <img src="img/ruota_panoramica.jpg" alt="Spiacenti, immagine non trovata">
         <img src="img/sfondo_uno.jpg" alt="Spiacenti, immagine non trovata">
         <img src="img/sfondo_due.jpg" alt="Spiacenti, immagine non trovata">
         <hr>
     </header>
-    
+    <!-- main section -->
+    <main>
+        <!-- expenses section  -->
+        <section id="le_mie_spese">
+            <h2>Le Mie Spese</h2>
+            <table>
+                <tr>
+                    <th>Numero</th>
+                    <th>Descrizione</th>
+                    <th>Costo</th>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120&euro;</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120&euro;</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120&euro;</td>
+                </tr>
+                <tr>
+                    <td>Totale</td>
+                    <td></td>
+                    <td>360&euro;</td>
+                </tr>
+            </table>
+
+        </section>
+        <hr>
+        <!-- "to do" section -->
+        <section id="cose_da_fare">
+            <h2>Cose da fare</h2>
+            <!-- "to do" list with special characters added-->
+            <ol>
+                <li>Visitare la Tower of London &#9746;</li>
+                <li>Visitare greenwich &#9745;</li>
+                <li>Ascoltare un artista di strada a Covent Garden &#9745;;</li>
+                <li>Mangiare il tipico Fish and Chips inglese &#9746;</li>
+            </ol>
+
+
+        </section>
+    </main>
+
 </body>
+
 </html>
