fix ul to ol list; completed to do and info sec

--- a/index.html
+++ b/index.html
@@ -60,15 +60,38 @@
         <section id="cose_da_fare">
             <h2>Cose da fare</h2>
             <!-- "to do" list with special characters added-->
-            <ol>
+            <ul>
                 <li>Visitare la Tower of London &#9746;</li>
                 <li>Visitare greenwich &#9745;</li>
                 <li>Ascoltare un artista di strada a Covent Garden &#9745;;</li>
                 <li>Mangiare il tipico Fish and Chips inglese &#9746;</li>
-            </ol>
-
-
+            </ul>
         </section>
+        <hr>
+        <section id="info">
+            <h2>Info utili:</h2>
+            <ol>
+                <li>Numeri utili di emergenza
+                    <ul>
+                        <li><b>999 -</b> Emergenza</li>
+                        <li><b>101 -</b> Numero Polizia</li>
+                        <li><b>111 -</b> Numero assistenza medica</li>
+                    </ul>
+                </li>
+                <li>Hotel
+                    <ul>
+                        <li><b>Nome Hotel:</b> Buckingham Palace</li>
+                        <li><b>Indirizzo hotel:</b> Westmister, London SW1A 1AA, Regno Unito</li>
+                    </ul>
+                </li><li>Aereo
+                    <ul>
+                        <li><b>Volo di Andata:</b>YI234X, ore 9.30 da Milano</li>
+                        <li><b>Volo di Ritorno:</b>YI236X, ore 18.30 da London Heathrow</li>
+                    </ul>
+                </li>
+            </ol>
+        </section>
+        <hr>
     </main>
 
 </body>
