added icon img; created "le_foto" section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Il mio Viaggio a Londra">
     <meta name="keywords" content="viaggio, spese, fare, info, foto ">
     <title>London Trip</title>
+
+    <link rel="icon" href="img/london_icon.png" type="img/png">
 </head>
 
 <body>
@@ -92,6 +94,8 @@
             </ol>
         </section>
         <hr>
+        <section id="le_foto">
+        </section>
     </main>
 
 </body>
