added last section "Le_Foto"

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <!-- head title -->
         <h1>Il mio Viaggio a Londra</h1>
         <!-- images source for head section -->
-        <img src="img/ruota_panoramica.jpg" alt="Spiacenti, immagine non trovata">
-        <img src="img/sfondo_uno.jpg" alt="Spiacenti, immagine non trovata">
-        <img src="img/sfondo_due.jpg" alt="Spiacenti, immagine non trovata">
+        <img src="img/ruota_panoramica.jpg" alt="Spiacenti, immagine non trovata" title="London View Piece1">
+        <img src="img/sfondo_uno.jpg" alt="Spiacenti, immagine non trovata" title="London View Piece2">
+        <img src="img/sfondo_due.jpg" alt="Spiacenti, immagine non trovata" title="London View Piece3">
         <hr>
     </header>
     <!-- main section -->
@@ -70,8 +70,10 @@
             </ul>
         </section>
         <hr>
+        <!-- info section -->
         <section id="info">
             <h2>Info utili:</h2>
+            <!-- nesting ordered and unordered list -->
             <ol>
                 <li>Numeri utili di emergenza
                     <ul>
@@ -85,7 +87,8 @@
                         <li><b>Nome Hotel:</b> Buckingham Palace</li>
                         <li><b>Indirizzo hotel:</b> Westmister, London SW1A 1AA, Regno Unito</li>
                     </ul>
-                </li><li>Aereo
+                </li>
+                <li>Aereo
                     <ul>
                         <li><b>Volo di Andata:</b>YI234X, ore 9.30 da Milano</li>
                         <li><b>Volo di Ritorno:</b>YI236X, ore 18.30 da London Heathrow</li>
@@ -95,6 +98,11 @@
         </section>
         <hr>
         <section id="le_foto">
+            <h2>Le foto</h2>
+            <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg"
+                alt="Spiacenti, immagine non trovata" title="London Canal View">
+            <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n"
+                alt="Spiacenti, immagine non trovata" title="London Bridge View">
         </section>
     </main>
 
