--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" class="classe 116">
+    <meta name="author" content="classe 116">
     <meta name="description" content="Il mio Viaggio a Londra">
     <meta name="keywords" content="viaggio, spese, fare, info, foto ">
     <title>London Trip</title>
