--- a/index.html
+++ b/index.html
@@ -13,32 +13,35 @@
 </head>
 
 <body>
-    <!-- head section -->
+    <!--opening head section -->
     <header>
         <!-- head title -->
         <h1>Il mio Viaggio a Londra</h1>
         <!-- images source for head section -->
-        <img src="img/ruota_panoramica.jpg" alt="Spiacenti, immagine non trovata" title="London View Piece1">
-        <img src="img/sfondo_uno.jpg" alt="Spiacenti, immagine non trovata" title="London View Piece2">
-        <img src="img/sfondo_due.jpg" alt="Spiacenti, immagine non trovata" title="London View Piece3">
+        <!-- opening div container "images" -->
+        <div id="images">
+            <img src="img/ruota_panoramica.jpg" alt="Vista di londra 1" title="London View Piece1">
+            <img src="img/sfondo_uno.jpg" alt="Vista di londra 2" title="London View Piece2">
+            <img src="img/sfondo_due.jpg" alt="Vista di londra 3" title="London View Piece3">
+            <!-- closing div container "images" -->
+        </div>
         <hr>
     </header>
-    <!-- main section -->
+    <!-- closing head section -->
+    <!-- opening main section -->
     <main>
-        <!-- expenses section  -->
+        <!-- opening expenses section  -->
         <section id="le_mie_spese">
             <h2>Le Mie Spese</h2>
+            <!-- openening expenses table -->
             <table>
-                <tr>
-                    <th>Numero</th>
-                    <th>Descrizione</th>
-                    <th>Costo</th>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td>Biglietto Aereo</td>
-                    <td>120&euro;</td>
-                </tr>
+                <thead>
+                    <tr>
+                        <th>Numero</th>
+                        <th>Descrizione</th>
+                        <th>Costo</th>
+                    </tr>
+                </thead>
                 <tr>
                     <td>1</td>
                     <td>Biglietto Aereo</td>
@@ -50,30 +53,39 @@
                     <td>120&euro;</td>
                 </tr>
                 <tr>
-                    <td>Totale</td>
-                    <td></td>
-                    <td>360&euro;</td>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120&euro;</td>
                 </tr>
+                <tfoot>
+                    <tr>
+                        <td colspan="2">Totale</td>
+                        <td>360&euro;</td>
+                    </tr>
+                </tfoot>
             </table>
-
+            <!-- closing expenses table -->
+            <hr>
         </section>
-        <hr>
-        <!-- "to do" section -->
+        <!-- closing expenses section -->
+        <!-- opening "to do" section -->
         <section id="cose_da_fare">
             <h2>Cose da fare</h2>
-            <!-- "to do" list with special characters added-->
+            <!-- opening "to do" list with special characters added-->
             <ul>
-                <li>Visitare la Tower of London &#9746;</li>
-                <li>Visitare greenwich &#9745;</li>
-                <li>Ascoltare un artista di strada a Covent Garden &#9745;;</li>
-                <li>Mangiare il tipico Fish and Chips inglese &#9746;</li>
+                <li>Visitare la Tower of London <b>&check;</b></li>
+                <li>Visitare greenwich <b>&cross;</b></li>
+                <li>Ascoltare un artista di strada a Covent Garden <b>&cross;</b></li>
+                <li>Mangiare il tipico Fish and Chips inglese <b>&check;</b></li>
             </ul>
+            <!-- closing "to do" list -->
+            <hr>
         </section>
-        <hr>
-        <!-- info section -->
+        <!-- closing "to do" section -->
+        <!-- opening info section -->
         <section id="info">
             <h2>Info utili:</h2>
-            <!-- nesting ordered and unordered list -->
+            <!-- opening and nesting ordered and unordered list -->
             <ol>
                 <li>Numeri utili di emergenza
                     <ul>
@@ -95,16 +107,23 @@
                     </ul>
                 </li>
             </ol>
+            <!-- closing list seciont "info" -->
+            <hr>
         </section>
-        <hr>
+        <!-- closing "info" section -->
+        <!-- opening "le_foto" section -->
         <section id="le_foto">
             <h2>Le foto</h2>
-            <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg"
-                alt="Spiacenti, immagine non trovata" title="London Canal View">
-            <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n"
-                alt="Spiacenti, immagine non trovata" title="London Bridge View">
+            <div id="foto">
+                <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg"
+                    alt="Immagine ponte londra" title=" London Canal View">
+                <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n"
+                    alt="Immagine London Bridge" title="London Bridge View">
+            </div>
         </section>
+        <!-- closing "le_foto" section -->
     </main>
+    <!-- closing main section -->
 
 </body>
 
